[project]
name = "langgraph-tuto"
version = "0.1.0"
description = ""
authors = [
    {name = "ihnkyo.chung",email = "ihnkyo.chung@okpos.co.kr"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
